--- a/Atividade 3/cadastro.html
+++ b/Atividade 3/cadastro.html
@@ -33,7 +33,7 @@
             <h4>Sobrenome:</h4>
             <input class="iptCadastro" type="text" placeholder="Insira seu sobrenome">
             <h4>Email:</h4>
-            <input class="iptCadastro" type="text" placeholder="Insira o seu email">
+            <input class="iptCadastro" type="email" placeholder="Insira o seu email">
             <h4>Senha:</h4>
             <input class="iptCadastro" type="password" placeholder="Insira sua senha">
             <button class="botao">Entrar</button>
