--- a/Atividade ChartJS/ex1.html
+++ b/Atividade ChartJS/ex1.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h3>Exercício 1 <br>
+  <h3>Atividade ChartJS <br>
     João Víctor Zinatto Sobral
   </h3>
   <div class="graficos" style="display: flex;">
